# arthexis

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .importlinter  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  Dockerfile.canary  LICENSE  LICENSING  MIGRATION_TRACKS.json  Makefile  README.base.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.md  README.release-ci.md  README.ru.md  REVISION  SECURITY.md  VERSION  agent.md  backup-fs.sh  change-hostname.sh  command.bat  command.sh  compose.yaml  configure.sh  conftest.py  db-migrate.sh  db-setup.sh  delegated-upgrade.sh  dev-maintenance.bat  (+75 more)
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md  screenshot-paths.authenticated.txt  screenshot-paths.public.txt
accounts/: README.md  admin.py  apps.py  backends.py  consumers.py  middleware.py  models.py  routing.py  tests.py  urls.py  views.py
ada/: README.md  arthexis_ada.gpr
api/: __init__.py  apps.py  schema.py  views.py
app/: __init__.py  apps.py  tasks.py  widgets.py
apps/: migration_utils.py
arthexis/: __init__.py  __main__.py  notebook.py  suite.py
arts/: admin.py  models.py  urls.py  views.py
awg/: README.md  admin.py  apps.py  models.py  tests.py  urls.py  views.py
backups/: blog_content_snapshot.json
beta/: apps.py  models.py  tests.py  urls.py  views.py
bind/: __init__.py  admin.py  apps.py  test_bsky.py  test_meta.py  test_odoo.py  urls.py
bsky/: apps.py  tests.py  urls.py  views.py
chat/: README.md  consumers.py  routing.py
ci/: architecture_manifest.yml
clipboard/: README.md  admin.py  apps.py  models.py  tasks.py  tests.py
config/: __init__.py  active_app.py  admin_urls.py  asgi.py  auth_app.py  celery.py  channel_layer.py  context_processors.py  database_router.py  horologia_app.py  loadenv.py  logging.py  middleware.py  offline.py  request_utils.py  roles.py  route_providers.py  settings.py  settings_helpers.py  sqlite_driver.py  urls.py  views.py  workgroup_app.py  wsgi.py
core/: __init__.py  admin.py  admin_commands.py  admin_history.py  admindocs.py  apps.py  auto_upgrade.py  backends.py  celery_utils.py  changelog.py  checks.py  entity.py  environment.py  fields.py  form_fields.py  github.py  github_helper.py  github_issues.py  lcd_screen.py  log_paths.py  mailer.py  middleware.py  model_permissions.py  models.py  notifications.py  passkeys.py  public_wifi.py  reference_utils.py  release.py  release_utils.py  release_workflow.py  rfid_import_export.py  sigil_builder.py  sigil_resolver.py  system.py  tasks.py  telnet_proxy.py  temp_passwords.py  test_system_info.py  tests.py  (+8 more)
crm/: README.md  apps.py
docker/: ci.Dockerfile
docs/: UPGRADE.md  admin_dashboard_performance.md  architecture_manifest.md  auto-upgrade.md  benchmarking.md  changelog.md  changelog_recalc_analysis.md  container-security.md  ds3231-rtc-wiring.md  energy-transactions-ledger.md  git-conflict-resolution.rst  github-canary-deployment.md  index.md  lcd-screen-hardware.md  llm-summary.md  logging-domain.md  mcp-domain.md  modeling-system-proposal.md  ocpp16_compliance_review.md  ocpp_connection_status.md  ocpp_cp_statuses.md  operators-manual.json  operators-manual.md  pypi-install-report.md  recipes.md  release-install-checks.md  release-notes.md  rfid_block_layout.md  routing.md  runserver-log-duplication.md  security-model.md  slow_low_value_test_candidates.md  startup-sequence.md  suite-services-report.md  troubleshooting-sqlite-locks.md  upgrade-error-handling.md  usb-camera-power-off.md  video-devices.md
emails/: admin.py  apps.py  models.py  tasks.py  tests.py
examples/external_plugin_reference/: README.md  pyproject.toml
examples/external_plugin_reference/arthexis_plugin_sample/: __init__.py  admin.py  apps.py  models.py
examples/external_plugin_reference/arthexis_plugin_sample/management/commands/: health_ping.py
examples/external_plugin_reference/arthexis_plugin_sample/migrations/: 0001_initial.py
footer/: README.md  context_processors.py  tests.py  utils.py
game/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
games/: apps.py  models.py  tests.py  urls.py  views.py
gway/: __init__.py
integrate/: __init__.py  admin.py  apps.py  models.py  test_bsky.py  test_meta.py  test_odoo.py  test_request.py  urls.py  views.py
integrations/: admin.py  models.py  test_bsky.py  test_meta.py  test_odoo.py  urls.py  views.py
integrator/: __init__.py  admin.py  apps.py  models.py  test_bsky.py  test_meta.py  test_odoo.py  urls.py
launch/: ubuntu22.sh  ubuntu24.sh
locale/: README.de.md  README.es.md  README.it.md
mailer/: README.md  admin.py  models.py  tests.py  urls.py  views.py
man/: apps.py  models.py  urls.py  views.py
msg/: __init__.py  admin.py  apps.py  forms.py  models.py  notifications.py  tests.py  urls.py  views.py
news/: tests.py  urls.py  views.py
nginx_app/: README.md  admin.py  apps.py  models.py  tests.py
nodes/: README.md  actions.py  admin.py  ansible.py  apps.py  backends.py  badge_utils.py  badge_values.py  consumers.py  gpiozero.py  lcd.py  models.py  notifications.py  rfid_sync.py  signals.py  startup_notifications.py  tasks.py  tests.py  urls.py  utils.py  views.py
ocpp/: README.md  admin.py  apps.py  call_error_handlers.py  call_result_handlers.py  charging_profiles.py  consumers.py  coverage.json  coverage21.json  evcs.py  forms.py  forwarder.py  forwarding_service.py  message_utils.py  models.py  network.py  remote.py  routing.py  simulator.py  status_resets.py  store.py  tasks.py  test_export_import.py  test_rfid.py  tests.py  transactions_io.py  urls.py  views.py
odoo/: README.md  admin.py  apps.py  models.py  tests.py  views.py
pages/: admin.py  apps.py  checks.py  consumers.py  context_processors.py  dashboard_rules.py  defaults.py  forms.py  middleware.py  models.py  module_defaults.py  site_badge_defaults.py  site_config.py  tasks.py  tests.py  urls.py  utils.py  views.py  whatsapp.py
post_office_migrations/: 0001_initial.py  __init__.py
projects/: __init__.py  (+1 more)
(+7514 files in other folders)
