[build-system]
requires = [ "setuptools", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "arthexis"
dynamic = ["version"]
description = "Energy & Power Infrastructure"
requires-python = ">=3.10,<3.14"
license = "LicenseRef-ARG-1.0"
license-files = ["LICENSE",]
classifiers = [ "Programming Language :: Python :: 3", "Framework :: Django",]
dependencies = [
  "anyio==4.13.0",
  "asgiref==3.11.0",
  "autobahn==24.4.2",
  "bleach==6.3.0",
  "boto3==1.42.78",
  "botocore==1.42.83",
  "celery==5.5.3",
  "cffi==2.0.0",
  "channels-redis==4.3.0",
  "channels==4.3.2",
  "click-didyoumean==0.3.1",
  "click-plugins==1.1.1.2",
  "click-repl==0.3.0",
  "click==8.3.2",
  "colorama==0.4.6",
  "cron-descriptor==2.0.8",
  "cryptography~=46.0.5",
  "daphne==4.2.1",
  "defusedxml==0.7.1",
  "diff-match-patch==20241021",
  "django-celery-beat==2.8.1",
  "django-encrypted-model-fields==0.6.5",
  "django-import-export==4.4.0",
  "django-mermaid==0.1.1",
  "django-object-actions==5.0.0",
  "django-otp==1.7.0",
  "django-parler==2.3",
  "django-timezone-field==7.2.1",
  "Django==5.2.12",
  "dnspython==2.7.0",
  "docutils==0.22.4",
  "filelock==3.25.2",
  "httpx==0.28.1",
  "kombu==5.5.4",
  "Markdown==3.10.2",
  "mdx_truly_sane_lists==1.3",
  "packaging==26.0",
  "pillow==12.2.0",
  "plyer==2.1.0; sys_platform == \"win32\"",
  "prompt_toolkit==3.0.52",
  "psutil==7.2.2",
  "psycopg-binary==3.3.3",
  "psycopg==3.3.3",
  "pycparser==3.0",
  "pyOpenSSL==26.0.0",
  "PySocks==1.7.1",
  "python-crontab==3.3.0",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.2.2",
  "PyYAML==6.0.3",
  "redis==7.4.0",
  "reportlab==4.4.10",
  "requests==2.33.1",
  "setuptools==82.0.1",
  "sqlparse==0.5.5",
  "tablib==3.9.0",
  "tinycss2==1.5.1",
  "toml==0.10.2",
  "Twisted==25.5.0",
  "txaio==25.9.2",
  "typing_extensions==4.15.0",
  "urllib3~=2.6.3",
  "weasyprint==68.0",
  "webauthn==2.7.1",
  "websocket-client==1.8.0",
  "websockets>=15,<17",
  "whitenoise==6.12.0",
]

[[project.authors]]
name = "Rafael J. Guillén-Osorio"
email = "tecnologia@gelectriic.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Repository = "https://github.com/arthexis/arthexis"
Homepage = "https://arthexis.com"



[project.optional-dependencies]
ci = [
  "black==26.3.1",
  "django-stubs-ext==6.0.2",
  "django-stubs==6.0.1",
  "import-linter==2.11",
  "mypy==1.20.0",
  "ruff==0.15.9",
  "twine==6.1.0",
  "types-requests==2.32.4.20250913",
]
dev = [
  "django-debug-toolbar==6.3.0",
]
docs = [
  "mkdocs==1.6.1",
]
ftp = [
  "pyftpdlib==2.2.0",
]
hardware = [
  "gpiozero==2.0.1; sys_platform == \"linux\" and (platform_machine == \"armv7l\" or platform_machine == \"aarch64\")",
  "mfrc522==0.0.7; sys_platform == \"linux\" and (platform_machine == \"armv7l\" or platform_machine == \"aarch64\") and python_version < \"3.12\"",
  "smbus2==0.6.0; sys_platform == \"linux\" and (platform_machine == \"armv7l\" or platform_machine == \"aarch64\")",
]
nodes = [
  "graphviz==0.21",
  "qrcode==8.2",
]
preview = [
  "playwright==1.58.0",
  "selenium==4.41.0",
]
qa = [
  "pytest-asyncio==1.3.0",
  "pytest-django==4.12.0",
  "pytest-timeout==2.4.0",
  "pytest-xdist==3.8.0",
  "pytest==9.0.3",
]
video = [
  "aiortc==1.14.0",
  "opencv-python==4.13.0.92",
  "trio-websocket==0.12.2",
  "trio==0.31.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"apps.apis" = [ "**/*",]
"apps.app" = [ "**/*",]
"apps.app.management" = [ "**/*",]
"apps.app.management.commands" = [ "**/*",]
"apps.app.migrations" = [ "**/*",]
"apps.audio" = [ "**/*",]
"apps.audio.management" = [ "**/*",]
"apps.audio.management.commands" = [ "**/*",]
"apps.audio.migrations" = [ "**/*",]
"apps.awg" = [ "**/*",]
"apps.awg.migrations" = [ "**/*",]
"apps.awg.tests" = [ "**/*",]
"apps.awg.views" = [ "**/*",]
"apps.aws" = [ "**/*",]
"apps.aws.migrations" = [ "**/*",]
"apps.base" = [ "**/*",]
"apps.cards" = [ "**/*",]
"apps.cards.management" = [ "**/*",]
"apps.cards.management.commands" = [ "**/*",]
"apps.cards.migrations" = [ "**/*",]
"apps.cards.models" = [ "**/*",]
"apps.celery" = [ "**/*",]
"apps.celery.beat_migrations" = [ "**/*",]
"apps.celery.migrations" = [ "**/*",]
"apps.certs" = [ "**/*",]
"apps.certs.management" = [ "**/*",]
"apps.certs.management.commands" = [ "**/*",]
"apps.certs.migrations" = [ "**/*",]
"apps.certs.tests" = [ "**/*",]
"apps.chats" = [ "**/*",]
"apps.chats.migrations" = [ "**/*",]
"apps.chats.models" = [ "**/*",]
"apps.clocks" = [ "**/*",]
"apps.clocks.migrations" = [ "**/*",]
"apps.clocks.tests" = [ "**/*",]
"apps.content" = [ "**/*",]
"apps.content.classifiers" = [ "**/*",]
"apps.content.migrations" = [ "**/*",]
"apps.content.tests" = [ "**/*",]
"apps.core" = [ "**/*",]
"apps.core.admin" = [ "**/*",]
"apps.core.management" = [ "**/*",]
"apps.core.management.commands" = [ "**/*",]
"apps.core.migrations" = [ "**/*",]
"apps.core.modeling" = [ "**/*",]
"apps.core.models" = [ "**/*",]
"apps.core.sites_migrations" = [ "**/*",]
"apps.core.system" = [ "**/*",]
"apps.core.tasks" = [ "**/*",]
"apps.core.templatetags" = [ "**/*",]
"apps.core.tests" = [ "**/*",]
"apps.core.views" = [ "**/*",]
"apps.core.views.reports" = [ "**/*",]
"apps.counters" = [ "**/*",]
"apps.counters.migrations" = [ "**/*",]
"apps.counters.templatetags" = [ "**/*",]
"apps.counters.tests" = [ "**/*",]
"apps.credentials" = [ "**/*",]
"apps.credentials.migrations" = [ "**/*",]
"apps.discovery" = [ "**/*",]
"apps.discovery.migrations" = [ "**/*",]
"apps.dns" = [ "**/*",]
"apps.dns.management" = [ "**/*",]
"apps.dns.management.commands" = [ "**/*",]
"apps.dns.migrations" = [ "**/*",]
"apps.dns.tests" = [ "**/*",]
"apps.docs" = [ "**/*",]
"apps.docs.migrations" = [ "**/*",]
"apps.emails" = [ "**/*",]
"apps.emails.migrations" = [ "**/*",]
"apps.emails.models" = [ "**/*",]
"apps.emails.tests" = [ "**/*",]
"apps.embeds" = [ "**/*",]
"apps.embeds.migrations" = [ "**/*",]
"apps.embeds.tests" = [ "**/*",]
"apps.energy" = [ "**/*",]
"apps.energy.admin" = [ "**/*",]
"apps.energy.migrations" = [ "**/*",]
"apps.energy.models" = [ "**/*",]
"apps.energy.services" = [ "**/*",]
"apps.features" = [ "**/*",]
"apps.features.migrations" = [ "**/*",]
"apps.flows" = [ "**/*",]
"apps.flows.migrations" = [ "**/*",]
"apps.flows.tests" = [ "**/*",]
"apps.forwarder" = [ "**/*",]
"apps.forwarder.ocpp" = [ "**/*",]
"apps.ftp" = [ "**/*",]
"apps.ftp.management" = [ "**/*",]
"apps.ftp.management.commands" = [ "**/*",]
"apps.ftp.migrations" = [ "**/*",]
"apps.ftp.tests" = [ "**/*",]
"apps.groups" = [ "**/*",]
"apps.groups.migrations" = [ "**/*",]
"apps.leads" = [ "**/*",]
"apps.links" = [ "**/*",]
"apps.links.migrations" = [ "**/*",]
"apps.links.templatetags" = [ "**/*",]
"apps.links.tests" = [ "**/*",]
"apps.locale" = [ "**/*",]
"apps.locale.migrations" = [ "**/*",]
"apps.locals" = [ "**/*",]
"apps.locals.migrations" = [ "**/*",]
"apps.locals.templatetags" = [ "**/*",]
"apps.locals.tests" = [ "**/*",]
"apps.locals.user_data" = [ "**/*",]
"apps.logbook" = [ "**/*",]
"apps.logbook.migrations" = [ "**/*",]
"apps.logbook.tests" = [ "**/*",]
"apps.loggers" = [ "**/*",]
"apps.maps" = [ "**/*",]
"apps.maps.migrations" = [ "**/*",]
"apps.media" = [ "**/*",]
"apps.media.migrations" = [ "**/*",]
"apps.meta" = [ "**/*",]
"apps.meta.migrations" = [ "**/*",]
"apps.modules" = [ "**/*",]
"apps.modules.migrations" = [ "**/*",]
"apps.nginx" = [ "**/*",]
"apps.nginx.admin" = [ "**/*",]
"apps.nginx.migrations" = [ "**/*",]
"apps.nginx.tests" = [ "**/*",]
"apps.nmcli" = [ "**/*",]
"apps.nmcli.migrations" = [ "**/*",]
"apps.nodes" = [ "**/*",]
"apps.nodes.admin" = [ "**/*",]
"apps.nodes.management" = [ "**/*",]
"apps.nodes.management.commands" = [ "**/*",]
"apps.nodes.migrations" = [ "**/*",]
"apps.nodes.models" = [ "**/*",]
"apps.nodes.tests" = [ "**/*",]
"apps.nodes.views" = [ "**/*",]
"apps.ocpp" = [ "**/*",]
"apps.ocpp.admin" = [ "**/*",]
"apps.ocpp.admin.miscellaneous" = [ "**/*",]
"apps.ocpp.consumers" = [ "**/*",]
"apps.ocpp.consumers.base" = [ "**/*",]
"apps.ocpp.management" = [ "**/*",]
"apps.ocpp.management.commands" = [ "**/*",]
"apps.ocpp.migrations" = [ "**/*",]
"apps.ocpp.models" = [ "**/*",]
"apps.ocpp.services" = [ "**/*",]
"apps.ocpp.tests" = [ "**/*",]
"apps.ocpp.utils" = [ "**/*",]
"apps.ocpp.views" = [ "**/*",]
"apps.ocpp.views.actions" = [ "**/*",]
"apps.odoo" = [ "**/*",]
"apps.odoo.migrations" = [ "**/*",]
"apps.odoo.models" = [ "**/*",]
"apps.odoo.tests" = [ "**/*",]
"apps.payments" = [ "**/*",]
"apps.payments.migrations" = [ "**/*",]
"apps.protocols" = [ "**/*",]
"apps.protocols.migrations" = [ "**/*",]
"apps.protocols.tests" = [ "**/*",]
"apps.rates" = [ "**/*",]
"apps.rates.migrations" = [ "**/*",]
"apps.rates.tests" = [ "**/*",]
"apps.release" = [ "**/*",]
"apps.release.admin" = [ "**/*",]
"apps.release.domain" = [ "**/*",]
"apps.release.management" = [ "**/*",]
"apps.release.management.commands" = [ "**/*",]
"apps.release.migrations" = [ "**/*",]
"apps.release.models" = [ "**/*",]
"apps.release.services" = [ "**/*",]
"apps.reports" = [ "**/*",]
"apps.reports.migrations" = [ "**/*",]
"apps.repos" = [ "**/*",]
"apps.repos.migrations" = [ "**/*",]
"apps.repos.models" = [ "**/*",]
"apps.repos.services" = [ "**/*",]
"apps.repos.tests" = [ "**/*",]
"apps.repos.views" = [ "**/*",]
"apps.screens" = [ "**/*",]
"apps.screens.animations" = [ "**/*",]
"apps.screens.lcd_screen" = [ "**/*",]
"apps.screens.management" = [ "**/*",]
"apps.screens.management.commands" = [ "**/*",]
"apps.screens.migrations" = [ "**/*",]
"apps.screens.tests" = [ "**/*",]
"apps.selenium" = [ "**/*",]
"apps.selenium.migrations" = [ "**/*",]
"apps.sensors" = [ "**/*",]
"apps.sensors.migrations" = [ "**/*",]
"apps.sigils" = [ "**/*",]
"apps.sigils.migrations" = [ "**/*",]
"apps.sigils.tests" = [ "**/*",]
"apps.sites" = [ "**/*",]
"apps.sites.admin" = [ "**/*",]
"apps.sites.management" = [ "**/*",]
"apps.sites.management.commands" = [ "**/*",]
"apps.sites.migrations" = [ "**/*",]
"apps.sites.models" = [ "**/*",]
"apps.sites.templatetags" = [ "**/*",]
"apps.sites.tests" = [ "**/*",]
"apps.sites.views" = [ "**/*",]
"apps.summary" = [ "**/*",]
"apps.summary.migrations" = [ "**/*",]
"apps.tasks" = [ "**/*",]
"apps.tasks.migrations" = [ "**/*",]
"apps.tasks.models" = [ "**/*",]
"apps.tasks.tests" = [ "**/*",]
"apps.teams" = [ "**/*",]
"apps.teams.admin" = [ "**/*",]
"apps.teams.migrations" = [ "**/*",]
"apps.terms" = [ "**/*",]
"apps.terms.migrations" = [ "**/*",]
"apps.tests" = [ "**/*",]
"apps.tests.domain" = [ "**/*",]
"apps.tests.migrations" = [ "**/*",]
"apps.totp" = [ "**/*",]
"apps.totp.migrations" = [ "**/*",]
"apps.totp.tests" = [ "**/*",]
"apps.users" = [ "**/*",]
"apps.users.management" = [ "**/*",]
"apps.users.management.commands" = [ "**/*",]
"apps.users.migrations" = [ "**/*",]
"apps.users.models" = [ "**/*",]
"apps.users.tests" = [ "**/*",]
"apps.vehicle" = [ "**/*",]
"apps.vehicle.migrations" = [ "**/*",]
"apps.video" = [ "**/*",]
"apps.video.management" = [ "**/*",]
"apps.video.management.commands" = [ "**/*",]
"apps.video.migrations" = [ "**/*",]
"apps.video.tests" = [ "**/*",]
"apps.widgets" = [ "**/*",]
"apps.widgets.management" = [ "**/*",]
"apps.widgets.management.commands" = [ "**/*",]
"apps.widgets.migrations" = [ "**/*",]
"apps.widgets.tests" = [ "**/*",]
"apps.wikis" = [ "**/*",]
"apps.wikis.migrations" = [ "**/*",]
"apps.wikis.templatetags" = [ "**/*",]
"apps.wikis.tests" = [ "**/*",]
config = [ "**/*",]

[tool.setuptools.packages.find]
where = [ ".",]


[tool.mypy]
python_version = "3.10"
plugins = ["mypy_django_plugin.main"]
files = [
  "scripts/generate_requirements.py",
  "scripts/sort_pyproject_deps.py",
  "apps/protocols",
  "apps/repos/github.py",
  "apps/repos/models/repositories.py",
  "apps/repos/services/github.py",
  "apps/repos/release_management.py",
  "apps/repos/task_utils.py",
  "apps/repos/views/webhooks.py",
  "apps/core/modeling",
  "apps/core/services/health.py",
  "apps/core/services/health_checks.py",
  "apps/core/services/odoo_quote_report.py",
  "apps/core/system/ui/formatting.py",
  "apps/core/system/ui/network_probe.py",
  "apps/core/system/ui/services.py",
  "apps/core/system/ui/uptime.py",
  "apps/core/system_ui.py",
  "apps/ocpp/call_result_handlers/common.py",
  "apps/ocpp/consumers/base/metering.py",
  "apps/ocpp/consumers/base/notifications.py",
  "apps/ocpp/consumers/base/routing.py",
  "apps/ocpp/consumers/base/transactions.py",
  "apps/ocpp/consumers/csms/dispatch.py",
  "apps/ocpp/payload_types.py",
  "apps/ocpp/services/certificate_status.py",
]
exclude = [
  ".*/migrations/.*",
  ".*/beat_migrations/.*",
  "media/.*",
  "static/.*",
  "node_modules/.*",
  "tests/fixtures/.*",
  "apps/.*/fixtures/.*",
  "scripts/generated/.*",
]
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = false
allow_untyped_globals = true
follow_imports = "silent"

[tool.django-stubs]
django_settings_module = "config.settings"

[[tool.mypy.overrides]]
module = ["psutil"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "bleach",
  "cron_descriptor",
  "dotenv",
  "import_export.*",
  "markdown",
  "mdx_truly_sane_lists",
  "qrcode",
  "qrcode.image.svg",
  "reportlab.*",
  "requests",
  "setuptools",
  "tomllib",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = [
  "*/migrations/*.py",
  "*/beat_migrations/*.py",
]

[tool.ruff.lint]
select = ["E9", "F823"]
extend-select = ["I", "UP", "B904"]

[tool.ruff.lint.per-file-ignores]
"apps/*/tests/*.py" = ["B904"]

[tool.setuptools.dynamic]
version = { file = ["VERSION"] }
