[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arthexis-plugin-sample"
version = "0.1.0"
description = "Reference external plugin for Arthexis"
requires-python = ">=3.11"
dependencies = ["Django>=5.2"]

[tool.setuptools.packages.find]
include = ["arthexis_plugin_sample*"]
